--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -74,7 +74,7 @@
           <img
             id="logoComercio"
             src="../assets/icons/logoComercio.svg"
-            alt="Logo Comercio"
+            alt="Logo Local Comercio"
           />
           <h3>Elegi los productos que vas a comprar</h3>
           <p>Si queres mas de uno. sumalos a tu carrito</p>
@@ -84,7 +84,7 @@
           <img
             id="logoPago"
             src="../assets/icons/logoTarjetas.svg"
-            alt="Logo Pago"
+            alt="Logo Tarjetas de Credito"
           />
           <h3>Pagá con el medio de pago que quieras</h3>
           <p>Comprá con seguridad: usamos la tecnología de Mercado Pago.</p>
