--- a/pages/pcCalidadPrecio.html
+++ b/pages/pcCalidadPrecio.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="Gaming, calidad, precio, juego, trabajo, estudio"
+    />
     <title>FM Gaming - Computacion</title>
     <link rel="stylesheet" href="../css/style.css" />
   </head>
@@ -104,7 +108,7 @@
       <section id="secPcOferta">
         <img
           src="../assets/imagenes/fotoPcEquilibrada.webp"
-          alt="Foto PC Basica"
+          alt="Foto PC Calidad Precio"
         />
         <!-- INFORMACION DEL PRODUCTO -->
         <div id="infoPcOferta">
@@ -126,10 +130,13 @@
           <!-- BOTON AGREGAR AL CARRITO -->
           <section id="secAgregarAlCarrito">
             <button><p>AGREGAR AL CARRITO</p></button>
-            <img src="../assets/icons/logoCarro.svg" alt="" />
+            <img
+              src="../assets/icons/logoCarro.svg"
+              alt="Logo Carrito Supermercado"
+            />
           </section>
           <section id="enviosGratis">
-            <img src="../assets/icons/logoCamion.svg" alt="" />
+            <img src="../assets/icons/logoCamion.svg" alt="Logo Camion" />
             <p>Envios a todo el pais!!</p>
           </section>
           <!-- BOTON DE CALCULAR ENVIO -->
