--- a/pages/prodDest1.html
+++ b/pages/prodDest1.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="Gaming, FPS, mouse, click, rosa, profesional"
+    />
     <title>FM Gaming - Computacion</title>
     <link rel="stylesheet" href="../css/style.css" />
   </head>
@@ -127,10 +131,13 @@
           <!-- BOTON AGREGAR AL CARRITO -->
           <section id="secAgregarAlCarrito">
             <button><p>AGREGAR AL CARRITO</p></button>
-            <img src="../assets/icons/logoCarro.svg" alt="" />
+            <img
+              src="../assets/icons/logoCarro.svg"
+              alt="Logo Carrito Supermercado"
+            />
           </section>
           <section id="enviosGratis">
-            <img src="../assets/icons/logoCamion.svg" alt="" />
+            <img src="../assets/icons/logoCamion.svg" alt="Logo Camion" />
             <p>Envios a todo el pais!!</p>
           </section>
           <!-- BOTON DE CALCULAR ENVIO -->
@@ -140,11 +147,7 @@
       <!-- SECCION DESCRIPCION PRODUCTO DESTACADO 1 (MOUSE) -->
       <section id="descripcionPcOferta">
         <!-- DESCRIPCION GENERICA -->
-        <p>
-          Imágenes de carácter ilustrativo, las PC son armadas y poseen sistema
-          operativo. No se incluyen monitor ni periféricos, sólo los componentes
-          detallados debajo.
-        </p>
+        <p>Imágenes de carácter ilustrativo.</p>
         <h3>Descripcion</h3>
         <!-- LISTADO DE CARACTERISISTICAS -->
         <ul>
