--- a/pages/producto3.html
+++ b/pages/producto3.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="Gaming, joystick, ps5" />
     <title>FM Gaming - Computacion</title>
     <link rel="stylesheet" href="../css/style.css" />
   </head>
@@ -126,10 +127,13 @@
           <!-- BOTON AGREGAR AL CARRITO -->
           <section id="secAgregarAlCarrito">
             <button><p>AGREGAR AL CARRITO</p></button>
-            <img src="../assets/icons/logoCarro.svg" alt="" />
+            <img
+              src="../assets/icons/logoCarro.svg"
+              alt="Logo Carrito Supermercado"
+            />
           </section>
           <section id="enviosGratis">
-            <img src="../assets/icons/logoCamion.svg" alt="" />
+            <img src="../assets/icons/logoCamion.svg" alt="Logo Camion" />
             <p>Envios a todo el pais!!</p>
           </section>
 
@@ -140,11 +144,7 @@
       <!-- SECCION DESCRIPCION PRODUCTO 3 (JOYSTICK) -->
       <section id="descripcionPcOferta">
         <!-- DESCRIPCION GENERICA -->
-        <p>
-          Imágenes de carácter ilustrativo, las PC son armadas y poseen sistema
-          operativo. No se incluyen monitor ni periféricos, sólo los componentes
-          detallados debajo.
-        </p>
+        <p>Imágenes de carácter ilustrativo.</p>
         <h3>Descripcion</h3>
         <!-- LISTADO DE CARACTERISISTICAS -->
         <ul>
